--- a/Nutrition.html
+++ b/Nutrition.html
@@ -13,7 +13,7 @@
         <img src="Beka heart.jpg" alt="Beka's Wellness Hub Logo">
       </div>
       <ul class="nav-links">
-         <li><a href="Home.html" target="_blank">Home</a></li>
+         <li><a href="index.html" target="_blank">Home</a></li>
         <li><a href="Nutrition.html" target="_blank">Nutrition</a></li>
         <li><a href="Exercise.html" target="_blank">Exercise</a></li>
         <li><a href="Weight Tracking.html" target="_blank">Weight Tracking</a></li>
